@@ -1,2 +1,1 @@
 usr/lib/php/
-etc/php/*/mods-available/
